# kubernetes-applier

./: LICENSE  README.md
.ci/: actor.yml  interface.yml  provider.yml
.github/workflows/: actor-release.yaml  build.yaml  interface-release.yaml  provider-release.yaml
applier/: Cargo.toml  Makefile  README.md  provider.mk  provider_test_config.toml
applier/src/: main.rs
applier/tests/: applier_test.rs
interface/: Makefile  codegen.toml  kubernetes_applier.smithy
interface/rust/: Cargo.toml
interface/rust/src/: kubernetes_applier.rs  lib.rs
service-applier/: Cargo.toml  Makefile  README.md
service-applier/src/: lib.rs
