[package]
name = "applier"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.13"
tracing = { version = "0.1", features = ["log"] }
tokio = { version = "1", features = ["full"] }
kubernetes-applier-interface = { version = "0.1" }
wasmbus-rpc = "0.6"
k8s-openapi = { version = "0.13", default-features = false, features = ["v1_22"] }
kube = { version = "0.65", default-features = false, features = ["rustls-tls", "config", "client"] }
serde_yaml = "0.8"

# test dependencies
[dev-dependencies]
wasmcloud-test-util = "0.1"

[[bin]]
name = "applier"
path = "src/main.rs"
